кастомные чек боксы

--- a/index.html
+++ b/index.html
@@ -20,13 +20,16 @@
             </form>
             <div class="tasks d-none">
                 <!-- <div class="task">
-                    <input type="checkbox" class="task__checkbox" name="task1" id="task1">
-                    <label for="task1" class="task__text checked">Сделать удаление каждого элемента по крестику справа</label>
+                    <input type="checkbox" class="task__checkbox visually-hidden" name="task1" id="task1">
+                    <span class="custom-checkbox"></span>
+                    <label for="task1" class="task__text">Сделать удаление каждого элемента по крестику справа</label>
                     <button class="task__delete-btn">❌</button>
                 </div>
                 <div class="task">
-                    <input type="checkbox" class="task__checkbox" name="task2" id="task2">
-                    <label for="task2" class="task__text">Сделать добавление элементов в список</label>
+                    <label>
+                        <input type="checkbox" class="task__checkbox">
+                        <p class="task__text">Сделать добавление элементов в список</p>
+                    </label>
                     <button class="task__delete-btn">❌</button>
                 </div> -->
             </div>
