поправила чек-боксы

--- a/index.html
+++ b/index.html
@@ -19,13 +19,15 @@
                 <input type="submit" class="submit-btn" value="Добавить">
             </form>
             <div class="tasks d-none">
-                <!-- <div class="task">
-                    <input type="checkbox" class="task__checkbox visually-hidden" name="task1" id="task1">
-                    <span class="custom-checkbox"></span>
-                    <label for="task1" class="task__text">Сделать удаление каждого элемента по крестику справа</label>
+              <!--    <div class="task">
+                    <label>
+                        <input type="checkbox" class="task__checkbox visually-hidden" name="task1" id="task1">
+                        <span class="custom-checkbox"></span>
+                        <p for="task1" class="task__text">Сделать удаление каждого элемента по крестику справа</p>
+                    </label>
                     <button class="task__delete-btn">❌</button>
                 </div>
-                <div class="task">
+                               <div class="task">
                     <label>
                         <input type="checkbox" class="task__checkbox">
                         <p class="task__text">Сделать добавление элементов в список</p>
